edit on wraping and fix white spaces

--- a/Project 1/static/style/index.css
+++ b/Project 1/static/style/index.css
@@ -48,8 +48,13 @@
     height: 25px;
     top: 25px;
     left: 208px;
-    /* margin-right: 1245px; */
     position:absolute;
+    background-color: #f7f9fa;
+    background-image: url('../images/search_icon.png');
+    background-size: cover;
+    border: none;
+    cursor:pointer;
+
 }
 .shopicon{
     background-image: url('../images/cart.png');
@@ -149,14 +154,20 @@
     font-size: 18px;
 }
 .text2{
-    margin-top: 40px;
-    margin-left: 110px;
-
+    display: grid;
+    grid-auto-columns: max-content;
+    grid-auto-flow: column;
+    grid-gap: 1.6rem;
 }
-.text2 h1{
+.customize2{
+    padding-left: 2.4rem;
+    padding-right: 2.4rem;
+    padding-top: 1.4rem;
+}
+.customize2 h1{
     font-size: 30px;
 }
-.text2 p{
+.customize2 p{
     margin-top: 10px;
     margin-left: 15px;
     font-size: 18px;
@@ -165,26 +176,39 @@
     display: flex;
     color: rgb(130, 130, 130);
     font-weight: bold;
+    padding-bottom: 0.5rem;
 }
 .kind div{
     margin-top: 10px;
     margin-left: 15px;
 }
 .text3{
+    background:white;
+    display: block;  
+    width: 100%;
+    max-width: 134rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 2.4rem;
+    padding-right: 2.4rem;
+    padding-top: 1.2rem;
+    margin: 0;
+}
+.customize3{
     border-style: double;
     border: solid ;
     border-color: silver;
-    margin-top: 20px;
-    margin-left: 120px;
-    width:1300px;
-    height: 700px;
-    background:white;
-    position:absolute;
-    z-index: 1;
+    padding: 3.2rem;
+}
+.text3img{
+    display: flex;  
+    flex-wrap: wrap;
+    padding-bottom: 300px;
 }
 .text3s1{
     margin-top: 32px;
     margin-left: 40px;
+    list-style-type: none;
 }
 
 .text3s1 h1{
@@ -208,7 +232,9 @@
     display: flex;
     justify-content: center;
     margin-top: 60px;
+    margin-bottom: 150px;
     position: relative;
+    list-style-type: none;
 }
 
 .text3s2 img{
@@ -216,13 +242,13 @@
     margin-left: 20px;
 }
 .caption1{
-    top: 400px;
+    top: 150px;
     width:230px;
     height: 100px;
     background:white;
     position:absolute;
     z-index: 1;
-    left: 3.5%;
+    left: 30px;
     font-size: 14px;
 }
 .caption1 p{
@@ -231,13 +257,13 @@
 }
 
 .caption2{
-    top: 400px;
+    top: 150px;
     width:230px;
     height: 100px;
     background:white;
     position:absolute;
     z-index: 1;
-    left: 22.5%;
+    left: 30px;
     font-size: 14px;
 }
 .caption2 p{
@@ -246,13 +272,13 @@
 }
 
 .caption3{
-    top: 400px;
+    top: 150px;
     width:230px;
     height: 100px;
     background:white;
     position:absolute;
     z-index: 1;
-    left: 42.2%;
+    left: 30px;
     font-size: 14px;
 }
 .caption3 p{
@@ -261,13 +287,13 @@
 }
 
 .caption4{
-    top: 400px;
+    top: 150px;
     width:230px;
     height: 100px;
     background:white;
     position:absolute;
     z-index: 1;
-    left: 61.5%;
+    left: 30px;
     font-size: 14px;
 }
 .caption4 p{
@@ -276,13 +302,13 @@
 }
 
 .caption5{
-    top: 400px;
+    top: 150px;
     width:230px;
     height: 100px;
     background:white;
     position:absolute;
     z-index: 1;
-    left: 80.5%;
+    left: 30px;
     font-size: 14px;
 }
 .caption5 p{
